# stupid-macros

./: Cargo.toml
examples/: repeat.rs  timed.rs
src/: lib.rs
